--- a/ThinkBridge_ShopBridge/Web.config
+++ b/ThinkBridge_ShopBridge/Web.config
@@ -38,6 +38,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+   <connectionStrings configSource="ConnectionStrings.config"></connectionStrings>
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs"
